Fix TextArea resize issue and add overflow to ListView

--- a/components/View/List/ListView/styles.scss
+++ b/components/View/List/ListView/styles.scss
@@ -1,6 +1,8 @@
 @import '../../../../stylesheets/base';
 
 .list-view {
+    overflow-y: auto;
+
     .empty {
         display: flex;
         align-items: center;
